Intro section - horizontal mobile stylefixes

--- a/styles/pages/_home.sass
+++ b/styles/pages/_home.sass
@@ -1,7 +1,7 @@
 .intro-section
   display: flex
   align-items: center
-  height: 100vh
+  min-height: 100vh
   max-height: 690px
   background: linear-gradient(107.81deg, #2E22AB 9.97%, #CF469F 90.03%)
   padding: 8rem 0
