Intro section - horizontal mobile stylefixes

--- a/styles/pages/_home.sass
+++ b/styles/pages/_home.sass
@@ -1,8 +1,9 @@
 .intro-section
   display: flex
   align-items: center
-  min-height: 100vh
+  height: 100vh
   max-height: 690px
+  min-height: 450px
   background: linear-gradient(107.81deg, #2E22AB 9.97%, #CF469F 90.03%)
   padding: 8rem 0
   overflow: hidden
